--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: master
         <span class="fa fa-tag"></span>Tags:
         {% if page.tags %}
           {% for tag in page.tags %}
-            <a href="/tags/{{tag}}"><span class="label label-primary">{{tag}}</span></a>
+            <span class="label label-primary">{{tag}}</span>
           {% endfor %}
         {% else %}
           None
